fixed overflow

--- a/react-front/src/App.css
+++ b/react-front/src/App.css
@@ -15,6 +15,7 @@
     min-width: 90%;
     min-height: 110vh;
     height: auto;
+    width: 90%;
     background-color: rgba(255,255,255,0.95);
 }
 
